# Big-Data-Analytics-Coursework

./: .gitignore  README.md  devenv.nix  pyproject.toml
Assignment_1/: main.py  main.typ  refs.bib
Assignment_2/: main.py  main.typ  refs.bib
PaperPresentation/: devenv.nix
PaperPresentation/InverseCoder/: package.json  pnpm-lock.yaml  slides.md
