[project]
name = "cosc760-bigdataanalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "category-encoders>=2.8.1",
    "marimo>=0.16.5",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "ruff>=0.14.0",
    "scikit-learn>=1.7.2",
]
